examples/test/testpolicy13875.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13875
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key23: value43
      key28: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value28
      podSelector:
        matchLabels:
          key17: value30
          key18: value43
          key26: value20
